--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -67,16 +67,25 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="row">
+      <div class="feature-box col-lg-4">
+        <i class="feature-icon fa-solid fa-circle-check"></i>
+        <h3 class="feature-title">Easy to use.</h3>
+        <p class="feature-detail">So easy to use, even your dog could do it.</p>
+      </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="feature-box col-lg-4">
+        <i class="feature-icon fa-solid fa-bullseye"></i>
+        <h3 class="feature-title">Elite Clientele</h3>
+        <p class="feature-detail">We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+      <div class="feature-box col-lg-4">
+        <i class="feature-icon fa-solid fa-heart"></i>
+        <h3 class="feature-title">Guaranteed to work.</h3>
+        <p class="feature-detail">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
   </section>
 
 
