--- a/index.html
+++ b/index.html
@@ -126,21 +126,58 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+                    <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Chihuahua</h3>
+            <h2 class="card-text">Free</h2>
+            <p class="card-text">5 Matches Per Day</p>
+            <p class="card-text">10 Messages Per Day</p>
+            <p class="card-text">Unlimited App Usage</p>
+            <button type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Chihuahua</h3>
+            <h2 class="card-text">Free</h2>
+            <p class="card-text">5 Matches Per Day</p>
+            <p class="card-text">10 Messages Per Day</p>
+            <p class="card-text">Unlimited App Usage</p>
+            <button type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Chihuahua</h3>
+            <h2 class="card-text">Free</h2>
+            <p class="card-text">5 Matches Per Day</p>
+            <p class="card-text">10 Messages Per Day</p>
+            <p class="card-text">Unlimited App Usage</p>
+            <button type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <h3>Chihuahua</h3>
+    <!-- <h3>Chihuahua</h3>
     <h2>Free</h2>
     <p>5 Matches Per Day</p>
     <p>10 Messages Per Day</p>
     <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <button type="button">Sign Up</button> -->
 
-
-    <h3>Labrador</h3>
+    <!-- <h3>Labrador</h3>
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
@@ -154,7 +191,7 @@
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <button type="button">Sign Up</button> -->
 
   </section>
 
