--- a/index.html
+++ b/index.html
@@ -126,72 +126,64 @@
 
   <!-- Pricing -->
 
-                    <section id="pricing">
+  <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-      <div class="col-lg-4">
+      <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
           <div class="card-body">
-            <h3 class="card-title">Chihuahua</h3>
-            <h2 class="card-text">Free</h2>
-            <p class="card-text">5 Matches Per Day</p>
-            <p class="card-text">10 Messages Per Day</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid">
+              <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-4">
+
+      <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
           <div class="card-body">
-            <h3 class="card-title">Chihuahua</h3>
-            <h2 class="card-text">Free</h2>
-            <p class="card-text">5 Matches Per Day</p>
-            <p class="card-text">10 Messages Per Day</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid">
+              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-4">
+
+      <div class="pricing-column col-lg-4 col-md-12 ">
         <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
           <div class="card-body">
-            <h3 class="card-title">Chihuahua</h3>
-            <h2 class="card-text">Free</h2>
-            <p class="card-text">5 Matches Per Day</p>
-            <p class="card-text">10 Messages Per Day</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid">
+              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button> -->
-
-    <!-- <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button> -->
 
   </section>
 
@@ -201,8 +193,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button class="download-button btn btn-dark btn-lg download-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button class="download-button btn btn-light btn-lg download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
