--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="cta-title">Find the True Love of Your Dog's Life Today.</h3>
     <button class="download-button btn btn-dark btn-lg download-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
     <button class="download-button btn btn-light btn-lg download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
 
@@ -202,7 +202,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="contact fa-brands fa-facebook"></i>
+    <i class="contact fa-brands fa-twitter"></i>
+    <i class="contact fa-brands fa-github"></i>
+    <i class="contact fa-brands fa-linkedin"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
